--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crawling_node_practice",
+  "name": "practice_0717",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,8 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12",
+    "puppeteer": "^20.8.2",
     "xlsx": "^0.18.5"
   }
 }
