--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice_0717",
+  "name": "practice_0718",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "puppeteer": "^20.8.2",
     "xlsx": "^0.18.5"
   }
